mc-wait-for-name: Call setlocale in main function

It is required to correctly show translated messages on some locales.

https://bugs.freedesktop.org/show_bug.cgi?id=93661